--- a/src/app/worker/examenes/examenes.component.css
+++ b/src/app/worker/examenes/examenes.component.css
@@ -12,6 +12,9 @@ h1 {
   color: var(--primary-color);
   margin-bottom: 1rem;
 }
+.text-center {
+  margin-bottom: 1.5rem;
+}
 
 @keyframes slideIn {
   from {
@@ -33,6 +36,8 @@ h1 {
 p-table {
   border-collapse: collapse;
   animation: slideIn 0.5s ease-out;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 p-table th {
@@ -41,6 +46,7 @@ p-table th {
   text-align: center;
   font-size: 16px;
   width: 25%;
+  padding: 12px 15px;
 }
 
 p-table tr {
@@ -64,13 +70,39 @@ p-table th {
 
 .table-container {
   max-width: 90%;
-  margin: auto;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
+  margin :auto;
 }
 .red-cell {
   color: red;
   font-size: 1.1rem;
   font-weight: bold;
+}
+.info-text {
+  text-align: center;
+  font-size: 1.1rem;
+  color: #6c757d;
+  margin-bottom: 20px;
+  font-weight: 400;
+}
+.filter-container {
+  display: flex;
+  justify-content: end;
+  margin-right: 5rem;
+  align-items: center;
+  gap: 10px;
+}
+
+.filter-container p-checkbox {
+  margin-right: 10px;
+}
+
+.no-exams-text {
+  text-align: center;
+  font-size: 1.1rem;
+  color: #ff4d4d;
+  margin-top: 20px;
+  font-weight: 600;
 }
