--- a/src/app/admin/trabajadores/trabajadores.component.css
+++ b/src/app/admin/trabajadores/trabajadores.component.css
@@ -212,11 +212,31 @@ p-field.photo-container {
 .search-container .p-input-icon-left input {
   padding-left: 2.5em;
 }
-p-table tr.red-row td {
+p-table tr {
   background-color: #ffcccc;
 }
+.canceled-row td {
+  background-color: #ffcccc;
+  color: #d93636;
+  font-weight: bold;
+}
 
-.legend div {
+.p-button-danger {
+  background-color: #ff4d4d;
+  border-color: #d93636;
+  color: white;
+}
+
+.legend {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  border: 1px solid #e0e0e0;
+}
+
+.legend-item {
   display: flex;
   align-items: center;
   margin-top: 10px;
@@ -225,9 +245,18 @@ p-table tr.red-row td {
 .color-box {
   width: 20px;
   height: 20px;
-  background-color: #ffcccc;
-  margin-right: 5px;
+  background-color: #ff4d4d;
+  border-radius: 4px;
+  margin-right: 10px;
+  border: 2px solid #d93636;
 }
+
+.legend-text {
+  font-weight: bold;
+  font-size: 14px;
+  color: #333;
+}
+
 .p-table-custom {
   width: 100%;
   display: table;
