--- a/src/app/admin/registro-trabajadores/registro-trabajadores.component.html
+++ b/src/app/admin/registro-trabajadores/registro-trabajadores.component.html
@@ -1,57 +1,69 @@
 <div class="register-container">
-<span class="back-arrow" (click)="goBack()">&larr;</span>
-<div class="p-fluid form-container mt-3">
-  <h2>Registrar Nuevo Trabajador</h2>
-  <form #trabajadorForm="ngForm" (ngSubmit)="registrarTrabajador(trabajadorForm)" class="trabajador-form">
-    <div class="field">
-      <label for="nombre">Nombre</label>
-      <input type="text" pInputText id="nombre" [(ngModel)]="trabajador.name" name="nombre"
-             required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$" autocomplete="off" #nombre="ngModel">
-      <div *ngIf="nombre.invalid && nombre.touched" class="error-message">
-        <div *ngIf="nombre.errors?.['required']">El nombre es requerido.</div>
-        <div *ngIf="nombre.errors?.['pattern']">El nombre solo debe contener letras y espacios.</div>
+  <span class="back-arrow" (click)="goBack()">&larr;</span>
+  <div class="p-fluid form-container mt-3">
+    <h2>Registrar Nuevo Trabajador</h2>
+    <form #trabajadorForm="ngForm" (ngSubmit)="registrarTrabajador(trabajadorForm)" class="trabajador-form">
+      <div class="field">
+        <label for="nombre">Nombre</label>
+        <input type="text" pInputText id="nombre" [(ngModel)]="trabajador.name" name="nombre"
+               required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$" autocomplete="off" #nombre="ngModel">
+        <div *ngIf="nombre.invalid && nombre.touched" class="error-message">
+          <div *ngIf="nombre.errors?.['required']">El nombre es requerido.</div>
+          <div *ngIf="nombre.errors?.['pattern']">El nombre solo debe contener letras y espacios.</div>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <label for="apellidos">Apellidos</label>
-      <input type="text" pInputText id="apellidos" [(ngModel)]="trabajador.lastName" name="apellidos"
-             required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$" autocomplete="off" #apellidos="ngModel">
-      <div *ngIf="apellidos.invalid && apellidos.touched" class="error-message">
-        <div *ngIf="apellidos.errors?.['required']">Los apellidos son requeridos.</div>
-        <div *ngIf="apellidos.errors?.['pattern']">Los apellidos solo deben contener letras y espacios.</div>
+      <div class="field">
+        <label for="apellidos">Apellidos</label>
+        <input type="text" pInputText id="apellidos" [(ngModel)]="trabajador.lastName" name="apellidos"
+               required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$" autocomplete="off" #apellidos="ngModel">
+        <div *ngIf="apellidos.invalid && apellidos.touched" class="error-message">
+          <div *ngIf="apellidos.errors?.['required']">Los apellidos son requeridos.</div>
+          <div *ngIf="apellidos.errors?.['pattern']">Los apellidos solo deben contener letras y espacios.</div>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <label for="foto">Foto</label>
-      <p-fileUpload #fileUpload id="foto" mode="basic" name="foto" accept="image/*" (onSelect)="onFileSelected($event)" chooseLabel="Seleccionar foto"></p-fileUpload>
-      <img *ngIf="selectedFileUrl" [src]="selectedFileUrl" alt="Foto seleccionada" class="preview-image">
-      <button *ngIf="selectedFile" type="button" (click)="resetFile()" pButton label="Volver a Subir una Foto" class="p-button-secondary mt-2"></button>
-      <p *ngIf="!selectedFile && trabajadorForm.submitted" class="error-message">Debe seleccionar una foto.</p>
-    </div>
+      <div class="field">
+        <label for="foto">Foto <span class="required">*</span></label>
+        <p-fileUpload #fileUpload id="foto" mode="basic" name="foto" accept="image/*"
+                      (onSelect)="onFileSelected($event)" chooseLabel="Seleccionar foto"
+                      class="clean-file-upload"></p-fileUpload>
+        <img *ngIf="selectedFileUrl" [src]="selectedFileUrl" alt="Foto seleccionada" class="small-preview-image">
 
-    <div class="field">
-      <label for="usuario">Usuario</label>
-      <input type="text" pInputText id="usuario" [(ngModel)]="trabajador.user" name="usuario"
-             required autocomplete="off" #usuario="ngModel" (ngModelChange)="validateUser(usuario)">
-      <div *ngIf="usuario.invalid && usuario.touched" class="error-message">
-        <div *ngIf="usuario.errors?.['required']">El usuario es requerido.</div>
-        <div *ngIf="usuario.errors?.['adminUser']">No se puede usar "admin" como nombre de usuario para un trabajador.</div>
+        <button *ngIf="selectedFile" type="button" (click)="resetFile()" pButton label="Volver a Subir una Foto"
+                class="p-button-secondary small-reset-button mt-2"></button>
+
+        <p *ngIf="!selectedFile && trabajadorForm.submitted" class="error-message">Debe seleccionar una foto.</p>
+        <p-progressSpinner *ngIf="spinner" styleClass="mt-3"></p-progressSpinner>
+        <p *ngIf="fileError" class="error-message">{{ fileError }}</p>
+        <p *ngIf="successMessage" class="success-message">{{ successMessage }}</p>
       </div>
-    </div>
 
-    <div class="field">
-      <label for="contrasena">Contraseña</label>
-      <input type="password" pInputText id="contrasena" [(ngModel)]="trabajador.password" name="contrasena"
-             required autocomplete="off" #contrasena="ngModel" minlength="6">
-      <div *ngIf="contrasena.invalid && contrasena.touched" class="error-message">
-        La contraseña es requerida y debe tener al menos 6 caracteres.
+      <div class="field">
+        <label for="usuario">Usuario</label>
+        <input type="text" pInputText id="usuario" [(ngModel)]="trabajador.user" name="usuario"
+               required autocomplete="off" #usuario="ngModel" (ngModelChange)="validateUser(usuario)">
+        <div *ngIf="usuario.invalid && usuario.touched" class="error-message">
+          <div *ngIf="usuario.errors?.['required']">El usuario es requerido.</div>
+          <div *ngIf="usuario.errors?.['adminUser']">No se puede usar "admin" como nombre de usuario para un
+            trabajador.
+          </div>
+        </div>
       </div>
-    </div>
 
-    <button type="submit" pButton label="Registrar" [disabled]="trabajadorForm.invalid || !selectedFile"></button>
-  </form>
-  <p-toast></p-toast>
+      <div class="field">
+        <label for="contrasena">Contraseña</label>
+        <input type="password" pInputText id="contrasena" [(ngModel)]="trabajador.password" name="contrasena"
+               required autocomplete="off" #contrasena="ngModel" minlength="6">
+        <div *ngIf="contrasena.invalid && contrasena.touched" class="error-message">
+          La contraseña es requerida y debe tener al menos 6 caracteres.
+        </div>
+      </div>
+
+      <button type="submit" pButton label="Registrar"
+              [disabled]="trabajadorForm.invalid || !selectedFile || fileError"></button>
+    </form>
+
+  </div>
 </div>
-</div>
+<p-toast></p-toast>
