--- a/src/app/admin/home/home.component.html
+++ b/src/app/admin/home/home.component.html
@@ -2,7 +2,7 @@
   <p-menubar #menu [model]="items" styleClass="menucus">
     <ng-template pTemplate="end">
       <button class="p-button p-button-outlined p-button-logout" (click)="logout()">
-        <i class="pi pi-sign-out mr-1"></i> Logout
+        <i class="pi pi-sign-out mr-1"></i> Cerrar Sesion
       </button>
     </ng-template>
   </p-menubar>
