--- a/src/app/worker/home/home.component.html
+++ b/src/app/worker/home/home.component.html
@@ -5,7 +5,7 @@
         {{ userName | upperCamelCase}}
       </div>
       <button class="p-button p-button-outlined p-button-logout" (click)="logout()">
-        <i class="pi pi-sign-out mr-1"></i> Logout
+        <i class="pi pi-sign-out mr-1"></i> Cerrar Sesion
       </button>
     </ng-template>
   </p-menubar>
